test/compile-fail/resolution/use-global-crate/expected.txt
error: global paths cannot start with `crate`
 --> top.rhdl:2:10
  |
2 |     use ::crate::a;
  |           ^^^^^ global paths cannot start with `crate`
